# PureDOOM

./: .gitignore  CLAUDE.md  CMakeLists.txt  METHODIZE.md  PureDOOM.h  README.md  REFACTOR.md
.github/workflows/: tests.yml
CMake/: FindNanoTest.cmake
Tests/: AutomapReplay.h  CMakeLists.txt  Common.h  DemoReplay.h  FinaleReplay.h  IntermissionReplay.h  MenuReplay.h  SimProbe.c  SimProbe.cpp  SimProbe.h  TestMain.cpp  doom-tests.cfg
Tests/Goldens/: automap.frames  demo1.frames  demo1.hashes  demo2.frames  demo2.hashes  demo3.frames  demo3.hashes  doom1.lumps  finale.frames  intermission.frames  menu.frames
Tests/Port/: AutomapTests.cpp  GeometryTests.cpp
Tests/Sim/: AutomapTests.cpp  CastCallTests.cpp  CheatTests.cpp  DemoTests.cpp  EngineTests.cpp  FinaleTests.cpp  GeometryTests.cpp  IntermissionTests.cpp  LevelTests.cpp  MathTests.cpp  MenuTests.cpp  OwnershipTests.cpp  PrimitiveTests.cpp  ReplayTests.cpp  SaveGameTests.cpp  ScenarioTests.cpp  StateClusterTests.cpp  TextureTests.cpp  WadTests.cpp
examples/EACP/: App.h  AutomapShader.h  CMakeLists.txt  Common.h  DoomImpl.c  DoomShader.h  EngineAccess.c  EngineAccess.cpp  EngineAccess.h  HudShader.h  Input.h  Layout.h  Main.cpp  OverlayShader.h  ScreenShader.h  Textures.h  View.cpp  View.h  WipeShader.h  WorldShader.h
examples/SDL/: CMakeLists.txt  sdl_example.c
examples/Tests/: CMakeLists.txt
src/DOOM/: CMakeLists.txt  Containers.h  DOOM.c  DOOM.cpp  DOOM.h  am_map.c  am_map.cpp  am_map.h  d_event.h  d_french.h  d_items.h  d_main.cpp  d_main.h  d_net.c  d_net.cpp  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doom_config.h  doomdata.h  doomdef.h  doomstat.h  doomtype.h  dstrings.h  f_finale.cpp  f_finale.h  f_wipe.cpp  f_wipe.h  g_game.cpp  g_game.h  hu_lib.cpp  hu_lib.h  hu_stuff.cpp  hu_stuff.h  i_net.cpp  i_net.h  i_sound.cpp  i_sound.h  (+87 more)
src/DOOM/Engine/: Engine.cpp  Engine.h
src/DOOM/Game/: AmmoLimits.h  Args.cpp  Args.h  AttractMode.h  Config.cpp  Config.h  ConfigPaths.h  ConfigTypes.h  CorpseQueue.h  DeferredNewGame.h  DemoState.h  DisplayState.h  DoomMain.cpp  DoomMain.h  EngineParams.h  Event.h  EventQueue.h  Game.cpp  Game.h  GameClock.h  GameDefs.h  GameFlow.h  GameSession.h  GameVersion.h  InputConfig.h  IntermissionInfo.h  LaunchOptions.h  LevelStats.h  MapSpawns.h  MovementSpeeds.h  Net.cpp  Net.h  NetState.h  NetTypes.h  OverlayState.h  ParTimes.h  PendingCommands.h  PlayerState.h  PlayerTypes.h  RefreshFlags.h  (+15 more)
src/DOOM/Host/: Api.cpp  Diagnostics.h  Host.cpp  Host.h  Net.cpp  Net.h  Platform.h  Sound.cpp  Sound.h  System.cpp  System.h  Text.cpp  Text.h  Video.cpp  Video.h
src/DOOM/Math/: Angle.h  BBox.cpp  BBox.h  Fixed.cpp  Fixed.h  FixedPoint.h  FunctionRef.h  Swap.h  Trig.cpp  Trig.h  TrigTables.h  Vec2.h
src/DOOM/Render/: BSP.cpp  BSP.h  BSPScratch.h  CompositeCache.h  Data.cpp  Data.h  Draw.cpp  Draw.h  DrawState.h  DrawTables.h  Drawers.h  GraphicsData.h  Lighting.h  Main.cpp  Main.h  PlaneScratch.h  Planes.cpp  Planes.h  RenderMainState.h  RenderScratch.h  RenderTypes.h  SegState.h  Segs.cpp  Segs.h  Sky.cpp  Sky.h  SolidSegs.h  SpriteScratch.h  SpriteState.h  Things.cpp  Things.h  Video.cpp  Video.h  VideoState.h  ViewPoint.h  ViewProjection.h  ViewWindow.h  WallScratch.h
src/DOOM/Sim/: ActionFunc.h  ActionScratch.h  Actions.cpp  Actions.h  ActiveSpecials.h  AnimatedSurfaces.h  Blockmap.h  Ceilings.cpp  Ceilings.h  Clip.h  Doors.cpp  Doors.h  EndLevelTimer.h  Enemy.cpp  Enemy.h  EnemyAI.h  Floors.cpp  Floors.h  Info.cpp  Info.h  Interaction.cpp  Interaction.h  ItemRespawnQueue.h  ItemTypes.h  Items.cpp  Level.cpp  Level.h  LevelPool.h  Lights.cpp  Lights.h  MapAction.cpp  MapAction.h  MapGeometry.h  MapTypes.h  MapUtil.cpp  MapUtil.h  Mobj.cpp  Mobj.h  MobjTypes.h  Movement.cpp  (+35 more)
src/DOOM/Thinkers/: Ceiling.cpp  Ceiling.h  Door.cpp  Door.h  FireFlicker.cpp  FireFlicker.h  FloorMove.cpp  FloorMove.h  Glow.cpp  Glow.h  LightFlash.cpp  LightFlash.h  Mobj.cpp  Mobj.h  Plat.cpp  Plat.h  Strobe.cpp  Strobe.h
src/DOOM/UI/: Automap.cpp  Automap.h  AutomapTypes.h  AutomapView.h  Cheat.cpp  Cheat.h  CheatTypes.h  Finale.cpp  Finale.h  FinaleState.h  Hud.cpp  Hud.h  HudChat.h  HudFlags.h  HudFont.h  HudMessage.h  HudState.h  HudWidgetTypes.h  HudWidgets.cpp  HudWidgets.h  Intermission.cpp  Intermission.h  IntermissionState.h  IntermissionTypes.h  Menu.cpp  Menu.h  MenuSettings.h  MenuState.h  StatusBar.cpp  StatusBar.h  StatusBarFace.h  StatusBarGraphics.h  StatusBarState.h  StatusBarTypes.h  StatusBarWidgets.h  StatusWidgetGraphics.h  StatusWidgetTypes.h  StatusWidgets.cpp  StatusWidgets.h  Wipe.cpp  (+2 more)
src/DOOM/Wad/: MapFormat.h  WadFile.cpp  WadFile.h
